k8s/dev/webapp.yaml
# @see
# - https://github.com/Azure-Samples/payara-on-aks/blob/main/payara-cafe.yml
# - https://github.com/GoogleCloudPlatform/cloud-code-samples/blob/master/nodejs/nodejs-guestbook/kubernetes-manifests/guestbook-backend.deployment.yaml
# - https://github.com/GoogleCloudPlatform/solutions-modern-cicd-anthos/blob/master/starter-repos/shared-kustomize-bases/online-boutique/emailservice.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: conote-webapp
spec:
  selector:
    matchLabels:
      app: conote-webapp
  replicas: 1 # No. of replicas/pods to run in this deployment
  template:
    metadata:
      labels:
        app: conote-webapp
    spec:
      # initContainers:
      #   - name: init-db-ready
      #     image: postgres:11-alpine
      #     command: ['/bin/sh', '-c']
      #     args:
      #       - until (pg_isready -h $PG_HOST -p 5432 -U $PG_USER) do echo "Waiting for postgres at $DATABASE_URL"; sleep 2; done
      #     env:
      #       - name: POSTGRES_PASSWORD # postgres-image require a value
      #         value: 'a_dummy_value'
      #       - name: PG_HOST
      #         value: 'postgres-release-postgresql'
      #       - name: PG_USER
      #         value: 'postgres'
      containers:
        # - name: tester
        #   image: node:14-alpine
        #   command: ['sleep', 'infinity']
        - name: conote-webapp-container
          image: conote-webapp-image
          command: ['/bin/sh', '-c']
          args: ['yarn run start']
          ports:
            - containerPort: 3000 # The port that the container exposes
---
apiVersion: v1
kind: Service
metadata:
  name: conote-webapp-service
spec:
  # type: ClusterIP
  type: NodePort
  selector:
    app: conote-webapp
  # ports:
  # - port: 31251
  #   targetPort: 3000
  #   nodePort: 31251 # GKE needs to open firewall @see https://stackoverflow.com/questions/68452384/how-can-i-visit-nodeport-service-in-gke
  # ports:
  #   - name: http
  #     port: 80
  #     targetPort: 3000
  ports:
    - protocol: TCP
      port: 50000
      targetPort: 3000
