k8s/dev/webapp.yml
# See:
# - https://github.com/Azure-Samples/payara-on-aks/blob/main/payara-cafe.yml
# - https://github.com/GoogleCloudPlatform/cloud-code-samples/blob/master/nodejs/nodejs-guestbook/kubernetes-manifests/guestbook-backend.deployment.yaml
# - https://github.com/GoogleCloudPlatform/solutions-modern-cicd-anthos/blob/master/starter-repos/shared-kustomize-bases/online-boutique/emailservice.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
spec:
  selector:
    matchLabels:
      app: webapp
  replicas: 1 # No. of replicas/pods to run in this deployment
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
        # - name: tester
        #   image: node:14-alpine
        #   command: ['sleep', 'infinity']
        # command: ['/bin/sh', '-c']
        # args: ['yarn run migrate && yarn run seed && yarn run start']
        - name: webapp
          image: conote-webapp
          # command: ['/bin/sh', '-c']
          # args: ['yarn run start']
          ports:
            - containerPort: 3000 # The port that the container exposes
---
apiVersion: v1
kind: Service
metadata:
  name: webapp
spec:
  type: ClusterIP
  selector:
    app: webapp
  ports:
    - port: 3000
      targetPort: 3000
