k8s/dev/ingress.yml
# apiVersion: extensions/v1beta1
# kind: Ingress
# metadata:
#   name: ingress
#   # annotations:
#   #   dev.okteto.com/generate-host: 'true'
# spec:
#   rules:
#     - http:
#         paths:
#           - path: /
#             backend:
#               serviceName: web
#               servicePort: 3000
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  annotations:
    # If the class annotation is not specified it defaults to "gce".
    kubernetes.io/ingress.class: 'gce'
spec:
  # tls:
  # - secretName: secret-name
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: web
                port:
                  number: 3000
