k8s/dev/managed-cert.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: conote-managed-cert-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: conote-https-static-ip # match gcloud static ip name
    networking.gke.io/managed-certificates: conote-managed-cert
    kubernetes.io/ingress.class: 'gce'
spec:
  defaultBackend:
    service:
      name: conote-webapp-service
      port:
        number: 50000
